# python_labs

./: 02_sum_avg.py  05_initials_and_len.py  README.md  __init__.py  kw.txt  output.csv  pyproject.toml
data/data/samples/: test1.json  test3.json  test4.json
data_lab_05/: people.json  people.xlsx  people_from_csv.json  people_from_json.csv
data_lab_08/: students_input.json
images/: desktop.ini
src/: 01_greeting.py  02_sum_avg.py  03_discount_vat.py  04_minutes_to_hhmm.py  05_initials_and_len.py  07_last_ex.py
src/data/lab09/: students.csv
src/lab01/: 01_greeting.py  02_sum_avg.py  03_discount_vat.py  04_minutes_to_hhmm.py  05_initials_and_len.py  06_distrib_class.py  07_last_ex.py
src/lab02/: arrays.py  matrix.py  tuples.py
src/lab03/: text.py  text_stats.py
src/lab03/src/lib/src/: text.py  text_stats.py
src/lab04/: io_txt_csv.py  text_report.py
src/lab04/src/: io_txt_csv.py
src/lab04/src/lab04/: io_txt_csv.py  text_report.py
src/lab05/: csv_json.py  csv_xls.py  json_csv.py
src/lab06/: cli_convert.py  cli_text.py
src/lab06/data/: people.csv  people.json  people.xlsx  test.txt
src/lab08/: README.md  models.py  serialize.py
src/lab09/: group.py
src/lab10/: linked_list.py  structures.py
src/lib/: csv_json.py  json_csv.py  text.py
src/src/scr/: 07_code_guess.py
tests/: test_json_csv.py  test_text.py
